--- a/gb/25/7/6/n14545754.md
+++ b/gb/25/7/6/n14545754.md
@@ -43,7 +43,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545397.md#1">台风丹娜丝来袭 屏东海口祭延期</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545404.md#1">台风丹娜丝逼近 南水分署防汛准备就绪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/31/n9788075.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/27/n11350548.md#1" target="_blank">王友群：陈独秀等10位中共党魁的最后结局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
